--- a/index/about.html
+++ b/index/about.html
@@ -3,18 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>主页</title>
+    <title>关于ACM</title>
+    <link rel="icon" href="https://icpc.global/favicon.ico">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/general.css">
 </head>
 <body>
     <div id="nav">
         <button>算法</button>
-        <button>搜索</button>
-        <button>贪心</button>
-        <button>数论</button>
-        <button>动态规划</button>
-        <button>图论</button>
+        <button id="index" data-url="../index.html">算法</button>
+        <button id="search" data-url="../search.html">搜索</button>
+        <button id="greedy" data-url="../greedy.html">贪心</button>
+        <button id="math" data-url="../math.html">数论</button>
+        <button id="dp" data-url="../dp.html">动态规划</button>
+        <button id="graph" data-url="../graph.html">图论</button>
     </div>
     <div id="content">
         <div id="left">
@@ -60,11 +62,11 @@
                 
             </div>
             <div class="img-pos">
-                <img src="../img/特殊荣誉气球.png" alt="" style="max-width: 200px;">
+                <img src="../img/特殊荣誉气球.png" alt="" style="max-width: 250px;">
                 <p class="img-text god">荣誉气球</p>
             </div>
             <div class="img-pos">
-                <img src="../img/大赛现场.png" alt="" style="max-width: 200px;">
+                <img src="../img/大赛现场.png" alt="" style="max-width: 250px;">
                 <p class="img-text red">比赛现场</p>
             </div>
             <h3 class="red">评分标准</h3>
