--- a/graph.html
+++ b/graph.html
@@ -6,6 +6,7 @@
     <title>图论</title>
     <link rel="icon" href="https://icpc.global/favicon.ico">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/general.css">
 </head>
 <body>
     <div id="nav">
@@ -27,6 +28,7 @@
         <div id="context">
             <img src="img/ACM图标.png" alt="" style="max-width: 100%;max-height: 15rem;">
         </div>
+        <div class="space"></div>
     </div>
     <script src="js/index.js"></script>
 </body>
