--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Welcome</title>
     <link rel="icon" href="https://icpc.global/favicon.ico">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/general.css">
 </head>
 <body>
     <div id="nav">
