--- a/index/about.html
+++ b/index/about.html
@@ -10,7 +10,6 @@
 </head>
 <body>
     <div id="nav">
-        <button>算法</button>
         <button id="index" data-url="../index.html">算法</button>
         <button id="search" data-url="../search.html">搜索</button>
         <button id="greedy" data-url="../greedy.html">贪心</button>
@@ -119,8 +118,8 @@
                     从而推动全球创新和经济增长。</p>
                 <p>ACM-ICPC大赛是一项旨在展示大学生创新能力、团队精神和在压力下编写程序、分析和解决问题能力的年度竞赛。</p>
             </div>
-
         </div>
+        <div class="space"></div>
     </div>
     <footer>
         <p>powered by Deng</p>
