--- a/index/time-complexity.html
+++ b/index/time-complexity.html
@@ -69,6 +69,7 @@
                 <p>为了降低算法复杂度，应当同时考虑到输入量，设计较好的算法。</p>
             </div>
         </div>
+        <div class="space"></div>
     </div>
     <footer>
         <p>powered by Deng</p>
