--- a/search.html
+++ b/search.html
@@ -26,7 +26,7 @@
             <button id="icpc" data-url="https://icpc.global/">ICPC</button>
         </div>
         <div id="context">
-            <h3>二分搜索</h3>
+            <h3 class="text-shadow-white">二分搜索</h3>
             <div class="text">
                 <p class="border">二分搜索（binary search），也称折半搜索。是一种在有序数组中查找某一特定元素的搜索算法。
                     搜索过程从数组的中间元素开始，如果中间元素正好是要查找的元素，则搜索过程结束；
@@ -37,7 +37,7 @@
             <div class="text">
                 <li>binary search(最基础的二分)</li>
                 <p class="text-border">给定一个有序的数组 nums[n] (假设为升序的，降序的同理)，查找目标值。分别设置左右边界为数组的两端，l = 0, r = n - 1。每次取得左右边界
-                    的中点 mid = (l + r) / 2。如果目标值大于了 nums[mid] ，那么可以知道在小于mid的区间的数都比目标值小，就更新左区间, l = mid + 1；否则更新右区间 r = mid - 1。不断重复
+                    的中点 mid = (l + r) / 2。如果目标值恰好等于 nums[mid] 就退出循环；如果目标值大于了 nums[mid] ，那么可以知道在小于mid的区间的数都比目标值小，就更新左区间, l = mid + 1；否则更新右区间 r = mid - 1。不断重复
                     这个过程，直到 l > r。
                 </p>
                 <li>upper bound</li>
@@ -56,7 +56,7 @@
                 <p>如果想要详细学习请移步到<a href="http://t.csdn.cn/Fkofy" target="_blank">算法入门之穷竭搜索</a>我会不定期更新</p>
             </div>
             <br />
-            <h3>DFS（深度优先搜索）</h3>
+            <h3 class="text-shadow-white">DFS（深度优先搜索）</h3>
             <div class="text">
                 <p class="border">DFS是学习搜索过程中绕不开的一个知识，虽然for循环也能实现搜索的操作，
                     但是搜索的上限取决于for循环嵌套的个数，但是对于一个问题我们不可能去去写几十个for循环，
@@ -71,7 +71,7 @@
                 </p>
             </div>
             <br />
-            <h3>BFS（宽度优先搜索）</h3>
+            <h3 class="text-shadow-white">BFS（宽度优先搜索）</h3>
             <div class="text">
                 <p class="border">BFS和DFS类似，所不同的就是每次的状态转移，DFS是从一个状态不断的往下搜索，
                     直到无法搜索了再改变状态继续搜索。BFS则是从一个状态出发，不断的搜索最近的状态，然后不断的
@@ -85,7 +85,11 @@
                 </p>
             </div>
         </div>
+        <div class="space"></div>
     </div>
+    <footer>
+        <p>powered by Deng</p>
+    </footer>
     <script src="js/index.js"></script>
 </body>
 </html>
