--- a/greedy.html
+++ b/greedy.html
@@ -32,7 +32,11 @@
                     总是做出在当前看来是最好的选择。也就是说，不从整体最优上加以考虑，
                     算法得到的是在某种意义上的局部最优解。</p>
                 <p>贪心算法不是对所有问题都能得到整体最优解，关键是贪心策略的选择。</p>
-                <p class="red">Note：贪心算法并不是某一个特定的算法，而是求解问题的一种策略</p>
+                <p class="red">Note：贪心算法并不是某一个特定的算法，而是求解问题的一种策略。具体一点就是
+                    如果我们要从一座城市去另一座城市，想要路程最短，按照贪心的思维，我们肯定是每次选择距离
+                    下一座城市最短的那条路。（当然针对这个问题这肯定不对，这里只是方便说明什么是贪心的策略。
+                    但这也恰恰是贪心算法的不足之处，得到的不一定是全局最优解）
+                </p>
             </div>
             <br />
             <h3 class="text-shadow-pink">算法思路</h3>
@@ -48,7 +52,7 @@
                 贪心算法采用自顶向下，以迭代的方法做出相继的贪心选择，每做一次贪心选择，
                 就将所求问题简化为一个规模更小的子问题，通过每一步贪心选择，可得到问题的一个最优解。
                 虽然每一步上都要保证能获得局部最优解，但由此产生的全局解有时不一定是最优的，
-                所以贪心算法不要回溯
+                所以贪心算法不要回溯。
                 </p>
             </div>
             <br />
