--- a/search.html
+++ b/search.html
@@ -59,7 +59,7 @@
             <h3 class="text-shadow-white">DFS（深度优先搜索）</h3>
             <div class="text">
                 <p class="border">DFS是学习搜索过程中绕不开的一个知识，虽然for循环也能实现搜索的操作，
-                    但是搜索的上限取决于for循环嵌套的个数，但是对于一个问题我们不可能去去写几十个for循环，
+                    但是搜索的上限取决于for循环嵌套的个数，但是对于一个问题我们不可能去写几十个for循环，
                     而且也不能根据问题去不断的改变代码，这样并不现实。这个时候我们就要利用到DFS，
                     DFS能利用递归搜索一个问题的所有状态。
                 </p>
